//
//  TimeCardApp.swift
//  TimeCard
//
//  Created by uhimania on 2025/09/24.
//

import SwiftData
import SwiftUI

struct TimeCardApp: App {
    private var container: ModelContainer
    private let timeRepository: TimeRecordRepository
    private let uptimeRepository: SystemUptimeRecordRepository
    private let calendarRepository: CalendarRecordRepository
    private let userRepository: UserRepository
    @State private var timeViewModel: TimeRecordViewModel
    @State private var uptimeViewModel: SystemUptimeRecordViewModel
    @State private var calendarViewModel: CalendarViewModel
    private let server: TimeCardServer
    
    init() {
        #if DEBUG
        let inMemory = true
        #else
        let inMemory = false
        #endif
        let schema = Schema(versionedSchema: TimeCardSchema_v4.self)
        let config = ModelConfiguration(schema: schema, isStoredInMemoryOnly: inMemory)
        do {
            try container = ModelContainer(for: schema, migrationPlan: TimeCardMigrationPlan.self, configurations: [config])
        } catch {
            fatalError(error.localizedDescription)
        }
        
        let localSource = DefaultLocalDataSource(container.mainContext)
        
        #if DEBUG
        let fileSource = FakeFileDataSource()
        #else
        let fileSource = DefaultFileDataSource()
        #endif
        
        let verifyCodeSender = MailVerifyCodeSender(
            host: "localhost",
            port: 587,
            username: "TimeCard",
            password: "TimeCard",
            senderName: "TimeCard",
            senderAddress: "info@timecard.jp",
            allowSelfCertificate: true
        )
        let passwordHasher = Argon2PasswordHasher()
        
        timeRepository = DefaultTimeRecordRepository(localSource)
        uptimeRepository = DefaultSystemUptimeRecordRepository(localSource, fileSource)
        calendarRepository = DefaultCalendarRecordRepository(localSource)
        userRepository = DefaultUserRepository(localSource, verifyCodeSender, passwordHasher)
        timeViewModel = TimeRecordViewModel(timeRepository)
        uptimeViewModel = SystemUptimeRecordViewModel(uptimeRepository)
        calendarViewModel = CalendarViewModel(calendarRepository)
        server = TimeCardServer(timeRepository, userRepository)
        
        try? uptimeRepository.restoreBackup()
    }
    
    var body: some Scene {
        MenuBarExtra {
            ContentView(viewModel: timeViewModel)
                .onReceive(NotificationCenter.default.publisher(for: Notification.exitApp)) { _ in
                    Task {
                        await AppTerminationManager.shared.performCleanup()
                        NSApplication.shared.terminate(nil)
                    }
                }
        } label: {
            Image(systemName: "clock.badge.checkmark")
            SystemUptimeView(viewModel: uptimeViewModel)
            SleepView(viewModel: timeViewModel)
            ServerView(server: server)
        }
        .menuBarExtraStyle(.window)
        
        Window("TimeCard", id: "calendar") {
            CalendarView(viewModel: calendarViewModel)
                .environment(\.calendarRecordRepository, calendarRepository)
        }
        
        Settings {
            LaunchSettingView()
        }
    }
}

extension Notification {
    static let exitApp = Notification.Name("exitApp")
}

class AppTerminationManager {
    private var cleanupActions: [() async -> Void] = []
    
    static let shared = AppTerminationManager()
    
    func addCleanupAction(_ action: @escaping () async -> Void) {
        cleanupActions.append(action)
    }
    
    func performCleanup() async {
        await withTaskGroup(of: Void.self) { group in
            for action in cleanupActions {
                group.addTask {
                    await action()
                }
            }
        }
    }
}

extension EnvironmentValues {
    @Entry var terminationManager = AppTerminationManager.shared
    @Entry var calendarRecordRepository: CalendarRecordRepository = FakeCalendarRecordRepository()
}

private class FakeCalendarRecordRepository: CalendarRecordRepository {
    func getRecordsStream(year: Int, month: Int) -> AsyncThrowingStream<[CalendarRecord], any Error> {
        AsyncThrowingStream { _ in }
    }
    func getRecord(year: Int, month: Int, day: Int) throws -> CalendarRecord {
        CalendarRecord(date: .now, timeRecords: [], uptimeRecords: [])
    }
    func updateRecord(_ record: CalendarRecord) throws {}
}

private class FakeFileDataSource: FileDataSource {
    func getUptimeRecords() throws -> [SystemUptimeRecord] { [] }
    func saveUptimeRecords(_ records: [SystemUptimeRecord]) throws {}
    func removeUptimeRecords() throws {}
}

#if DEBUG
struct UITestApp: App {
    private let container: ModelContainer
    private let timeRepository: TimeRecordRepository
    private let uptimeRepository: SystemUptimeRecordRepository
    private let calendarRepository: CalendarRecordRepository
    private let record: CalendarRecord
    @State private var recordToEdit: CalendarViewModel.CalendarRecord? = nil
    @State private var now: Date
    @State private var timeRecords: [TimeRecord] = []
    @State private var uptimeRecords: [SystemUptimeRecord] = []
    @State private var state: WorkState = .offWork
    
    init() {
        let schema = Schema(versionedSchema: TimeCardSchema_v4.self)
        let config = ModelConfiguration(schema: schema, isStoredInMemoryOnly: true)
        do {
            try container = ModelContainer(for: schema, configurations: [config])
        } catch {
            fatalError(error.localizedDescription)
        }
        
        let localSource = DefaultLocalDataSource(container.mainContext)
        let fileSource = FakeFileDataSource()
        timeRepository = DefaultTimeRecordRepository(localSource)
        uptimeRepository = DefaultSystemUptimeRecordRepository(localSource, fileSource)
        calendarRepository = DefaultCalendarRecordRepository(localSource)
        
        let formatter = DateFormatter()
        formatter.dateFormat = "yyyy-MM-dd HH:mm:ss"
        
        record = CalendarRecord(
            date: formatter.date(from: "2025-12-29 00:00:00") ?? .now,
            timeRecords: [
                TimeRecord(
                    checkIn: formatter.date(from: "2025-12-29 10:45:30"),
                    checkOut: formatter.date(from: "2025-12-30 02:12:38"),
                    breakTimes: [
                        TimeRecord.BreakTime(
                            start: formatter.date(from: "2025-12-29 23:48:12"),
                            end: formatter.date(from: "2025-12-30 01:33:48")
                        )
                    ]
                )
            ],
            uptimeRecords: [
                SystemUptimeRecord(
                    launch: formatter.date(from: "2025-12-29 08:27:32") ?? .now,
                    shutdown: formatter.date(from: "2025-12-29 23:59:58") ?? .now,
                    sleepRecords: [
                        SystemUptimeRecord.SleepRecord(
                            start: formatter.date(from: "2025-12-29 12:30:20") ?? .now,
                            end: formatter.date(from: "2025-12-29 13:15:18") ?? .now
                        )
                    ]
                )
            ]
        )
        
        now = formatter.date(from: "2025-12-29 00:00:00") ?? .now
    }
    
    var body: some Scene {
        WindowGroup {
            if CommandLine.arguments.contains("RecorderViewTests") {
                RecorderView(viewModel: TimeRecordViewModel(timeRepository))
            } else if CommandLine.arguments.contains("CalendarViewTests") {
                RecorderView(viewModel: TimeRecordViewModel(timeRepository))
                CalendarView(viewModel: CalendarViewModel(calendarRepository))
            } else if CommandLine.arguments.contains("CalendarRecordViewTests") {
                CalendarRecordView(record: record.asViewModel(), recordToEdit: $recordToEdit)
                if let rec = recordToEdit {
                    Text(rec.date, format: .dateTime.month().day())
                        .accessibilityIdentifier("text_rec_to_edit")
                }
            } else if CommandLine.arguments.contains("MonthSelectorViewTests") {
                MonthSelectorView(date: $now)
            } else if CommandLine.arguments.contains("RecordEditViewTests") {
                Text("\(timeRecords.count)")
                    .accessibilityIdentifier("time_record_count")
                Text("\(uptimeRecords.count)")
                    .accessibilityIdentifier("uptime_record_count")
                Button("show") {
                    recordToEdit = CalendarViewModel.CalendarRecord(date: .now)
                }
                .sheet(item: $recordToEdit) { record in
                    RecordEditView(repository: calendarRepository, date: record.date)
                }
                Button("update") {
                    timeRecords = (try? container.mainContext.fetch(FetchDescriptor<LocalTimeRecord>()))?.map { $0.asTimeRecord() } ?? []
                    uptimeRecords = (try? container.mainContext.fetch(FetchDescriptor<LocalUptimeRecord>()))?.map { $0.asUptimeRecord() } ?? []
                }
            } else if CommandLine.arguments.contains("TimeRecordEditViewTests") {
                TimeRecordEditView(viewModel: TimeRecordEditViewModel(date: record.date, records: record.timeRecords.map { $0.asViewModel() }))
            } else if CommandLine.arguments.contains("SystemUptimeRecordEditViewTests") {
                SystemUptimeRecordEditView(viewModel: UptimeRecordEditViewModel(date: record.date, records: record.uptimeRecords.map { $0.asViewModel() }))
            } else if CommandLine.arguments.contains("SleepViewTests") {
                SleepView(viewModel: TimeRecordViewModel(timeRepository))
                Text("\(String(describing: state))")
                    .accessibilityIdentifier("state")
                Button("checkIn") {
                    try? timeRepository.checkIn()
                }
                Button("sleep") {
                    NSWorkspace.shared.notificationCenter.post(name: NSWorkspace.willSleepNotification, object: nil)
                }
                Button("wake") {
                    NSWorkspace.shared.notificationCenter.post(name: NSWorkspace.didWakeNotification, object: nil)
                }
                Button("update") {
                    state = timeRepository.getState()
                }
            } else if CommandLine.arguments.contains("SystemUptimeViewTests") {
                SystemUptimeView(viewModel: SystemUptimeRecordViewModel(uptimeRepository))
                if let uptime = uptimeRecords.first {
                    Text(uptime.launch, format: .dateTime.hour().minute().second())
                        .accessibilityIdentifier("launch")
                    Text(uptime.shutdown, format: .dateTime.hour().minute().second())
                        .accessibilityIdentifier("shutdown")
                    if let sleep = uptime.sleepRecords.first {
                        Text(sleep.start, format: .dateTime.hour().minute().second())
                            .accessibilityIdentifier("start")
                        Text(sleep.end, format: .dateTime.hour().minute().second())
                            .accessibilityIdentifier("end")
                    }
                }
                Button("sleep") {
                    NSWorkspace.shared.notificationCenter.post(name: NSWorkspace.willSleepNotification, object: nil)
                }
                Button("wake") {
                    NSWorkspace.shared.notificationCenter.post(name: NSWorkspace.didWakeNotification, object: nil)
                }
                Button("terminate") {
                    Task {
                        await AppTerminationManager.shared.performCleanup()
                    }
                }
                Button("update") {
                    let descriptor = FetchDescriptor<LocalUptimeRecord>(
                        sortBy: [.init(\.launch)]
                    )
                    uptimeRecords = (try? container.mainContext.fetch(descriptor))?.map { $0.asUptimeRecord() } ?? []
                }
            }
        }
    }
}
#endif
