...
                .onDelete(perform: deleteItems)
                
                Button("勤怠を追加", systemImage: "plus") {
                    addItem()
                }
                .frame(maxWidth: .infinity)
                .accessibilityIdentifier("button_add_time_record")
            }
            .toolbar {
                ToolbarItem {
                    EditButton()
                        .accessibilityIdentifier("button_edit")
                }
...
        @Binding var record: TimeRecord
        
        var body: some View {
            Section {
                VStack {
                    DatePicker("出勤", selection: $record.checkIn.bindUnwrap(defaultValue: .now), displayedComponents: [.date, .hourAndMinute])
                        .accessibilityIdentifier("date_check_in")
                    Divider()
                    DatePicker("退勤", selection: $record.checkOut.bindUnwrap(defaultValue: .now), displayedComponents: [.date, .hourAndMinute])
                        .accessibilityIdentifier("date_check_out")
                }
                
                ForEach($record.breakTimes) { $breakTime in
...
