...
                }
                
                Button("追加", systemImage: "plus") {
                    viewModel.addRecord()
                }
                .font(.footnote)
                .accessibilityIdentifier("button_add_uptime_record")
            }
        }
    }
    
    private struct DetailView: View {
        @Bindable var record: UptimeRecordEditViewModel.SystemUptimeRecord
...
        
        var body: some View {
            VStack(alignment: .leading) {
                Form {
                    DatePicker("起動", selection: $record.launch, displayedComponents: [.date, .hourAndMinute])
                        .isValid(valid)
                        .accessibilityIdentifier("date_launch")
                    DatePicker("終了", selection: $record.shutdown, displayedComponents: [.date, .hourAndMinute])
                        .isValid(valid)
                        .accessibilityIdentifier("date_shutdown")
                }
                .padding()
                .disabled(!record.editable)
...
